// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<PaginationContainer
  nextLabel=">"
  onChange={[Function]}
  page={1}
  previousLabel="<"
  totalPages={5}
>
  <PaginationButtonContainer
    value={1}
  />
  <PaginationButtonContainer
    value={2}
  />
  <PaginationButtonContainer
    value={3}
  />
  <PaginationButtonContainer
    value={4}
  />
  <PaginationButtonContainer
    value={5}
  />
</PaginationContainer>
`;

exports[` 2`] = `
<PaginationContainer
  nextLabel=">"
  onChange={[Function]}
  page={1}
  previousLabel="<"
  totalPages={10}
>
  <PaginationButtonContainer
    value={1}
  />
  <PaginationButtonContainer
    key="2"
    value={2}
  />
  <PaginationButtonContainer
    key="3"
    value={3}
  />
  <PaginationButtonContainer
    key="4"
    value={4}
  />
  <PageButton
    size="kilo"
  >
    ...
  </PageButton>
  <PaginationButtonContainer
    value={10}
  />
</PaginationContainer>
`;

exports[` 3`] = `
<PaginationContainer
  nextLabel=">"
  onChange={[Function]}
  page={2}
  previousLabel="<"
  totalPages={10}
>
  <PaginationButtonContainer
    value={1}
  />
  <PaginationButtonContainer
    key="2"
    value={2}
  />
  <PaginationButtonContainer
    key="3"
    value={3}
  />
  <PaginationButtonContainer
    key="4"
    value={4}
  />
  <PageButton
    size="kilo"
  >
    ...
  </PageButton>
  <PaginationButtonContainer
    value={10}
  />
</PaginationContainer>
`;

exports[` 4`] = `
<PaginationContainer
  nextLabel=">"
  onChange={[Function]}
  page={10}
  previousLabel="<"
  totalPages={10}
>
  <PaginationButtonContainer
    value={1}
  />
  <PageButton
    size="kilo"
  >
    ...
  </PageButton>
  <PaginationButtonContainer
    key="7"
    value={7}
  />
  <PaginationButtonContainer
    key="8"
    value={8}
  />
  <PaginationButtonContainer
    key="9"
    value={9}
  />
  <PaginationButtonContainer
    value={10}
  />
</PaginationContainer>
`;

exports[` 5`] = `
<PaginationContainer
  nextLabel=">"
  onChange={[Function]}
  page={9}
  previousLabel="<"
  totalPages={10}
>
  <PaginationButtonContainer
    value={1}
  />
  <PageButton
    size="kilo"
  >
    ...
  </PageButton>
  <PaginationButtonContainer
    key="7"
    value={7}
  />
  <PaginationButtonContainer
    key="8"
    value={8}
  />
  <PaginationButtonContainer
    key="9"
    value={9}
  />
  <PaginationButtonContainer
    value={10}
  />
</PaginationContainer>
`;

exports[` 6`] = `
<PaginationContainer
  nextLabel=">"
  onChange={[Function]}
  page={5}
  previousLabel="<"
  totalPages={10}
>
  <PaginationButtonContainer
    value={1}
  />
  <PageButton
    size="kilo"
  >
    ...
  </PageButton>
  <PaginationButtonContainer
    key="4"
    value={4}
  />
  <PaginationButtonContainer
    key="5"
    value={5}
  />
  <PaginationButtonContainer
    key="6"
    value={6}
  />
  <PageButton
    size="kilo"
  >
    ...
  </PageButton>
  <PaginationButtonContainer
    value={10}
  />
</PaginationContainer>
`;
